	use first/shortest match, you simplify things and you can drop the +
	operator since you can do "a+" as "aa*"

	*** To be refined. (ARSE = anthony's reduced search expressions)

--1.72.0--

   +	Added time62EncodeTime, time62DecodeTime.

   +	Added TextFindQuote to quote TextFind's meta characters.

   !	TextFind: fixed handling of backslash literal, in particular "\[".

--1.71.6--

   !	dnsListQueryMail changed to accept a list of domains for which
   	to test against MAIL BLs, typically free mail services.

   +	uri.c: added -M option for list of limited domains for which
   	to test againts MAIL BLs given by -m. Default is "*".

   !	TextFind: fixed bug when pattern is simply "*".

--1.71.5--

   +	Add dnsListQueryMail for querying EMAIL BL.

   +	uri.c, uri.txt, uri.txt.out: Add -m mail-bl option to uri tool.

   !	uriParse2: when parsing a mail address, the schemeInfo was corrupt.

   !	NULL pointer guards for Text*EndsWith and Text*StartsWith.

--1.71.4--

   *    Do NOT upgrade SQLite to 3.6.14; it has broken configure script.

   !	uriParse2: added check to distinguish between schemes that can
	have an empty value (about:) and those that require a value
	(http://blah/). Requested by Alex Broens.

   !	spanIP: fixed to take into account IPv6 address within square
   	brackets, eg. [2001:0DB8::1234]

   !	uri.txt.out: updated to account for the uriParse2 and spanIP
   	fixes.

   !	dnsListQueryNs0: was recursing if both NS and an SOA was returned
	with the initial NS lookup. This would incorrectly cause a 2nd
	lookup on the SOA domain.

--1.71.3--

  !!	mime.c/h: Fixes following the complete overhaul to maintain
	backwards compatibility behaviour of mime_decoded_octet hook.
	This was being done just before flushing the decode buffer, but
	that caused problems in how the uri, milter-link, and smtpf
	detected potential URI; they occasionally missed URI when there
	was more than one in the decode buffer. Fixed several decode